// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lane R2 — the phone is unchanged (golden) coi-vault at rest, iOS 390 1`] = `
{
  "lines": 436,
  "sha256": "0fb90bec63f75c33a917ecb917ceafdcec5b653120879258ce418d66182a34fb",
}
`;

exports[`lane R2 — the phone is unchanged (golden) coi-vault at rest, web 390 1`] = `
{
  "lines": 436,
  "sha256": "0fb90bec63f75c33a917ecb917ceafdcec5b653120879258ce418d66182a34fb",
}
`;

exports[`lane R2 — the phone is unchanged (golden) coi-vault at rest, web 768 1`] = `
{
  "lines": 436,
  "sha256": "0fb90bec63f75c33a917ecb917ceafdcec5b653120879258ce418d66182a34fb",
}
`;

exports[`lane R2 — the phone is unchanged (golden) coi-vault?subId=S1 (the detail early return), iOS 390 1`] = `
{
  "lines": 696,
  "sha256": "f8faa2a1023a9b63684e862ef5f6ca924c1033eeb8e2154d9507581f3ec94cbe",
}
`;

exports[`lane R2 — the phone is unchanged (golden) subs add sheet (add-sub), iOS 390 1`] = `
{
  "lines": 809,
  "sha256": "aed86401ce0d5f2ee6949e33cd66af06aaeed6331ebbe3fcaa66a6eb4233362c",
}
`;

exports[`lane R2 — the phone is unchanged (golden) subs at rest, iOS 390 1`] = `
{
  "lines": 809,
  "sha256": "1bc534937f07fe59372c262bf302ded268c3f3dc6d440b93abfb2ce2d0a5e3fe",
}
`;

exports[`lane R2 — the phone is unchanged (golden) subs at rest, web 390 1`] = `
{
  "lines": 809,
  "sha256": "1bc534937f07fe59372c262bf302ded268c3f3dc6d440b93abfb2ce2d0a5e3fe",
}
`;

exports[`lane R2 — the phone is unchanged (golden) subs at rest, web 768 1`] = `
{
  "lines": 809,
  "sha256": "1bc534937f07fe59372c262bf302ded268c3f3dc6d440b93abfb2ce2d0a5e3fe",
}
`;

exports[`lane R2 — the phone is unchanged (golden) subs detail open (sub-S1), iOS 390 1`] = `
{
  "lines": 986,
  "sha256": "6fd75a7fd84fd89410b649be9ebb57c02e4291d9af973a66c609762ec3c380d9",
}
`;
